k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: auth-service
        image: ghcr.io/fchieric/auth-service:latest
        ports:
        - containerPort: 4000
