k8s/longstash-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  selector:
    app: logstash
  ports:
    - name: beats
      protocol: TCP
      port: 5044
      targetPort: 5044
    - name: monitoring
      protocol: TCP
      port: 9600
      targetPort: 9600
