k8s/notification-alert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-alert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-alert
  template:
    metadata:
      labels:
        app: notification-alert
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: notification-alert
        image: ghcr.io/fchieric/notification-alert:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-alert
spec:
  selector:
    app: notification-alert
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
