k8s/product-receiver-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-receiver-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-receiver-service
  template:
    metadata:
      labels:
        app: product-receiver-service
    spec:
      containers:
        - name: product-receiver-service
          image: ghcr.io/fchieric/product-receiver-service:latest
          ports:
            - containerPort: 3002
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: product-receiver-service
spec:
  selector:
    app: product-receiver-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
