k8s/search-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
  labels:
    app: search-service
spec:
  selector:
    app: search-service
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
