k8s/web-client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-client
  labels:
    app: web-client
spec:
  selector:
    app: web-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
