k8s/web-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-client
  template:
    metadata:
      labels:
        app: web-client
    spec:
      containers:
        - name: web-client
          image: ghcr.io/fchieric/web-client:latest
          ports:
            - containerPort: 3000
          command: ["npm", "run", "dev"]
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: web-client
spec:
  selector:
    app: web-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
